# 3A04-T01-Group4

./: .gitignore  README.md  SE3A04_D2_Template.tex  SE3A04_D3_Template.tex  package-lock.json  report.aux  report.fdb_latexmk  report.fls  report.tex
Backend/: .env.example  .gitignore  docker-compose.yml
Backend/services/accounts/: .env.example  DockerFile  entrypoint.sh  requirements.txt
Backend/services/alerts/: requirements.txt
Backend/services/city/: requirements.txt
Backend/services/data_processing/: Dockerfile  requirements.txt
Backend/services/public/: entrypoint.sh  requirements.txt
Backend/shared/: __init__.py  exceptions.py  observer.py  pyproject.toml  schemas.py  sensor_data.py
Backend/shared/scemas_shared.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Deliverables/: .gitignore  README.md  SE3A04_D2_Template.tex  SE3A04_D3_Template.tex  report.tex
ExternalSensorData/: Dockerfile  README.md  entrypoint.sh  generate_data.py  send_data.py  sensor_data.txt
Mobileapp/SCEMAS_Public_App/: .gitignore  app.json  package-lock.json  package.json
Mobileapp/SCEMAS_Public_App/app/: Map.tsx
Mobileapp/SCEMAS_Public_App/lib/: supabase.ts
Mobileapp/SCEMAS_Public_App/scripts/: ping-supabase.mjs
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/electron/: README.md  main.ts  preload.ts
frontend/src/: App.tsx  electron.d.ts  index.css
frontend/src/components/: ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Login.tsx  (+5 more)
supabase/: config.toml
(+45 files in other folders)
