# shared/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scemas-shared"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]

[tool.setuptools]
# This tells setuptools to find all sub-packages in the current directory
py-modules = ["exceptions", "observer", "schemas", "sensor_data"]